fix katex math overflow

--- a/app/math.css
+++ b/app/math.css
@@ -1,4 +1,4 @@
-.math.math-display {
+.katex-display {
 	/* @apply bg-white/30 dark:bg-white/10;
 	@apply border border-gray-300 dark:border-white/25;
 	@apply rounded-lg;
@@ -7,6 +7,6 @@
 	@apply overflow-x-auto;
 }
 
-div[data-post="true"] > .math.math-display {
+div[data-post="true"] > .katex-display {
 	@apply mb-4;
 }
